Switch to Assignment

--- a/01_materials/labs/01_3_local_model.ipynb
+++ b/01_materials/labs/01_3_local_model.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "b93f5989",
    "metadata": {},
    "outputs": [],
@@ -126,17 +126,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "1d1a1fa2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'To convert miles to kilometers, use the conversion factor:\\n\\n**1 mile = 1.60934 kilometers**\\n\\n### Simple Method:\\nMultiply the number of miles by **1.60934**.\\n\\n### Example:\\nIf you have 5 miles:\\n5 × 1.60934 = **8.0467 kilometers**\\n\\n### Quick Approximation:\\nFor everyday use, you can round it to:\\n- **1 mile ≈ 1.6 kilometers**\\n\\nSo, 5 miles ≈ 8 kilometers (a close enough estimate).\\n\\n✅ Remember:  \\n**Miles to kilometers: multiply by 1.60934**  \\nOr use the rule of thumb: **\"Every mile is about 1.6 kilometers.\"**'"
+       "'To convert miles to kilometers, use the conversion factor:\\n\\n**1 mile ≈ 1.60934 kilometers**\\n\\n### Steps to convert:\\n1. Take the number of miles.\\n2. Multiply it by 1.60934.\\n\\n### Example:\\nIf you have 5 miles:\\n5 × 1.60934 = 8.0467 kilometers\\n\\nSo, **5 miles ≈ 8.05 kilometers** (rounded to two decimal places).\\n\\n### Quick Rule of Thumb:\\nFor a rough estimate, you can remember:  \\n**\"One mile is about 1.6 kilometers.\"**\\n\\nThis is accurate enough for most everyday uses.\\n\\n✅ Final Answer:  \\n**Multiply miles by 1.60934 to get kilometers.**'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
