--- a/01_materials/labs/01_1_introduction.ipynb
+++ b/01_materials/labs/01_1_introduction.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6accefb4",
    "metadata": {},
    "outputs": [],
@@ -209,10 +209,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "73bd2169",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'dotenv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mutils\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mlogger\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m get_logger\n\u001b[32m      2\u001b[39m _logs = get_logger(\u001b[34m__name__\u001b[39m, log_dir=\u001b[33m'\u001b[39m\u001b[33m../../06_logs/\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Workspace/GitHub/deploying-ai/01_materials/labs/../../05_src/utils/logger.py:4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlogging\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdatetime\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m datetime\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdotenv\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_dotenv\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mos\u001b[39;00m\n\u001b[32m      7\u001b[39m load_dotenv()\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'dotenv'"
+     ]
+    }
+   ],
    "source": [
     "from utils.logger import get_logger\n",
     "_logs = get_logger(__name__, log_dir='../../06_logs/')"
@@ -260,10 +273,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "71fc7085",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv\n",
     "load_dotenv('../../05_src/.secrets')"
@@ -279,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "b76030d2",
    "metadata": {},
    "outputs": [],
@@ -299,10 +323,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "99b8d22a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'DEBUG'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "os.getenv('LOG_LEVEL')"
@@ -340,10 +375,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "9fecd195",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! How can I assist you today?\n"
+     ]
+    }
+   ],
    "source": [
     "from openai import OpenAI\n",
     "client = OpenAI()\n",
@@ -373,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "5261a7d1",
    "metadata": {},
    "outputs": [],
@@ -392,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "7e6a3c88",
    "metadata": {},
    "outputs": [],
@@ -413,10 +456,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "c4094417",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! How's it going?\n"
+     ]
+    }
+   ],
    "source": [
     "print(response.output[0].content[0].text)"
    ]
@@ -431,10 +482,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "753cb8cf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! How's it going?\n"
+     ]
+    }
+   ],
    "source": [
     "print(response.output_text)"
    ]
@@ -461,10 +520,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "8e46b505",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"id\": \"resp_0646db67392b63cb0068f8462c3058819682a3b8ba47296060\",\n",
+      "  \"created_at\": 1761101356.0,\n",
+      "  \"error\": null,\n",
+      "  \"incomplete_details\": null,\n",
+      "  \"instructions\": null,\n",
+      "  \"metadata\": {},\n",
+      "  \"model\": \"gpt-4o-2024-08-06\",\n",
+      "  \"object\": \"response\",\n",
+      "  \"output\": [\n",
+      "    {\n",
+      "      \"id\": \"msg_0646db67392b63cb0068f8462cf8008196a20b8889e57cc49b\",\n",
+      "      \"content\": [\n",
+      "        {\n",
+      "          \"annotations\": [],\n",
+      "          \"text\": \"Hello! How's it going?\",\n",
+      "          \"type\": \"output_text\",\n",
+      "          \"logprobs\": []\n",
+      "        }\n",
+      "      ],\n",
+      "      \"role\": \"assistant\",\n",
+      "      \"status\": \"completed\",\n",
+      "      \"type\": \"message\"\n",
+      "    }\n",
+      "  ],\n",
+      "  \"parallel_tool_calls\": true,\n",
+      "  \"temperature\": 1.0,\n",
+      "  \"tool_choice\": \"auto\",\n",
+      "  \"tools\": [],\n",
+      "  \"top_p\": 1.0,\n",
+      "  \"background\": false,\n",
+      "  \"max_output_tokens\": null,\n",
+      "  \"max_tool_calls\": null,\n",
+      "  \"previous_response_id\": null,\n",
+      "  \"prompt_cache_key\": null,\n",
+      "  \"reasoning\": {\n",
+      "    \"effort\": null,\n",
+      "    \"summary\": null\n",
+      "  },\n",
+      "  \"safety_identifier\": null,\n",
+      "  \"service_tier\": \"default\",\n",
+      "  \"status\": \"completed\",\n",
+      "  \"text\": {\n",
+      "    \"format\": {\n",
+      "      \"type\": \"text\"\n",
+      "    },\n",
+      "    \"verbosity\": \"medium\"\n",
+      "  },\n",
+      "  \"top_logprobs\": 0,\n",
+      "  \"truncation\": \"disabled\",\n",
+      "  \"usage\": {\n",
+      "    \"input_tokens\": 10,\n",
+      "    \"input_tokens_details\": {\n",
+      "      \"cached_tokens\": 0\n",
+      "    },\n",
+      "    \"output_tokens\": 8,\n",
+      "    \"output_tokens_details\": {\n",
+      "      \"reasoning_tokens\": 0\n",
+      "    },\n",
+      "    \"total_tokens\": 18\n",
+      "  },\n",
+      "  \"user\": null,\n",
+      "  \"billing\": {\n",
+      "    \"payer\": \"developer\"\n",
+      "  },\n",
+      "  \"store\": true\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "print(response.to_json())"
    ]
@@ -484,7 +617,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "deploying-ai-env (3.12.11)",
    "language": "python",
    "name": "python3"
   },
@@ -498,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
